<resources>
    <string name="app_name">Android Chat</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="send">Send</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registerNewUser">Register new user</string>
    <string name="back">Back</string>
    <string name="loginError">Login error</string>
    <string name="registerError">Register error</string>
    <string name="invalidLoginOrPassword">Invalid login or password</string>
    <string name="notEnteredLoginOrPassword">Login or password has not been entered</string>
    <string name="userAlreadyExist">User already exist</string>
    <string name="registrationSuccessful">Registration successful</string>
    <string name="registrationWasSuccessful">Registration was successful</string>
    <string name="invalidPasswords">Invalid passwords</string>
    <string name="passwordsNotTheSame">Passwords are not the same</string>
    <string name="contactsList">Users list</string>
    <string name="groupsList">Groups list</string>
    <string name="typeMessage">Type message</string>
    <string name="refresh">Refresh</string>
    <string name="addUser">Add user</string>
    <string name="selectUser">Select user to add</string>
    <string name="createGroup">Create group</string>
    <string name="success">Success</string>
    <string name="groupName">Group name</string>
    <string name="failure">Failure</string>
    <string name="groupCreateSuccess">Group has been created</string>
    <string name="groupCreateFailure">Group was not created</string>
    <string name="addUserToGroupSuccess">User has been added to the group</string>
    <string name="addUserToGroupFailure">User was not added to the group</string>
    <string name="connectionFailed">Connection Failed</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enterNewGroupName">Enter new group name</string>
    <string name="sendingMessageFailed">Sending the message failed</string>
</resources>